--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==4.0.4
 django-debug-toolbar==3.4.0
+django-cors-headers==4.4.0
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-spectacular==0.22.1
